# isomaniac

./: .gitignore  CanvasDemo.hs  ISOHSX.hs  KeyTest.hs  LICENSE  Main.hs  README.md  Server.hs  Types.hs  default.nix  isomaniac.cabal  shell.nix
Web/ISO/: Diff.hs  HSX.hs  Murv.hs  Patch.hs  Types.hs
