name:                isomaniac
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable isomaniac
  main-is: Main.hs
--  exposed-modules:     Main, Types
  other-extensions:    ExtendedDefaultRules, OverloadedStrings, QuasiQuotes, JavaScriptFFI
  build-depends:       base >=4.8 && <4.9
                     , ghcjs-base
                     , hsx2hs
                     , mtl
                     , stm
                     , text
  default-language:    Haskell2010
