name:                isomaniac
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.ISO.HSX
                       Web.ISO.Types
  other-extensions:    ExtendedDefaultRules, FlexibleInstances, MultiParamTypeClasses, OverloadedStrings, QuasiQuotes, TypeFamilies, RankNTypes, JavaScriptFFI
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010