name:                isomaniac
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.ISO.Diff
                       Web.ISO.Patch
                       Web.ISO.HSX
                       Web.ISO.Murv
                       Web.ISO.Types
  other-extensions:    ExtendedDefaultRules, FlexibleInstances, MultiParamTypeClasses, OverloadedStrings, QuasiQuotes, TypeFamilies, RankNTypes, JavaScriptFFI
  build-depends:       base >=4.8 && <4.9, aeson, containers, ghcjs-base, lens, mtl, stm, text
  default-language:    Haskell2010

Test-suite spec
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       containers,
                       hspec,
                       hsx2hs,
                       isomaniac,
                       text
  default-language:    Haskell2010
  ghc-options:         -threaded -O2
